# sarif-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test
.github/workflows/: ci.yml
src/pydantic_sarif/: __init__.py  sarif.py
src/sarif_pydantic/: sarif.py
tests/: conftest.py  test_basic_types.py  test_invocation.py  test_location_types.py  test_result_types.py  test_sarif.py  test_serialization.py  test_tool_types.py  test_validation.py
