[project]
name = "sarif-pydantic"
version = "0.5.2"
description = ""
authors = [
    {name = "Daniel D'Avella", email = "drdavella@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sarif_pydantic"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
